# brenn

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile.cc-example  Makefile  NOTICE  README.md  STATUS.md  TODO.md  brenn-setup-home  brenn.dev.toml  brenn.e2e.toml  deny.toml  noop_mcp.py  noop_mcp_test.py  rust-toolchain.toml
brenn/: Cargo.toml  build.rs
brenn-activation/: Cargo.toml
brenn-activation/src/: lib.rs
brenn-budget/: Cargo.toml
brenn-budget/src/: lib.rs
brenn-cc/: Cargo.toml
brenn-cc/src/: error.rs  lib.rs
brenn-cc/src/protocol/: builders.rs  incoming.rs  mod.rs  outgoing.rs
brenn-cc/src/session/: approval.rs  mod.rs  tasks.rs
brenn-cc/src/transport/: mod.rs  reader.rs  writer.rs
brenn-cli/: Cargo.toml
brenn-cli/src/: main.rs
brenn-cli/tests/: cli.rs
brenn-common/: Cargo.toml
brenn-common/src/: lib.rs
brenn-envelope/: Cargo.toml
brenn-envelope/src/: lib.rs
brenn-graf/: Cargo.toml
brenn-graf/src/: lib.rs  subprocess.rs  test_support.rs
brenn-lib/: Cargo.toml
brenn-lib/src/: app.rs  approval_rules.rs  cost_samples.rs  frontmatter_css.rs  integration.rs  lib.rs  mcp_tool_names.rs  model_window_cache.rs  repo_sync_cursor.rs  runtime_dir.rs  subprocess.rs  test_utils.rs  token_bucket.rs  usage.rs  usage_export.rs  util.rs
brenn-lib/src/access/: acl.rs  mod.rs  mqtt_match.rs  raw.rs  resolve.rs
brenn-lib/src/auth/: device.rs  invite.rs  mod.rs  password.rs  session.rs  user.rs
brenn-lib/src/automation/: config.rs  db.rs  error_payload.rs  fire.rs  job.rs  loop_task.rs  mod.rs  startup.rs  test_support.rs
brenn-lib/src/config/: alerting.rs  app.rs  attachment.rs  brenn.rs  claude_defaults.rs  container.rs  events.rs  frontmatter.rs  hooks.rs  logging.rs  mcp.rs  mod.rs  observability.rs  path_mapper.rs  repo.rs  resolve.rs  secret.rs  security.rs  server.rs  surface_description.rs  wasm.rs  watchdog.rs
brenn-lib/src/conversation/: mod.rs
brenn-lib/src/db/: mod.rs
brenn-lib/src/messaging/: config.rs  dispatcher.rs  edit.rs  ephemeral.rs  format.rs  gates.rs  identity.rs  ingress.rs  mod.rs  query.rs  subscribe.rs  system.rs  test_support.rs  testutils.rs
brenn-lib/src/mqtt/: address.rs  config.rs  connection.rs  egress.rs  error.rs  mod.rs  payload.rs  service.rs  state.rs  test_support.rs
brenn-lib/src/obs/: README.md  alerting.rs  config.rs  layers.rs  mod.rs  panic_hook.rs  security.rs  transcript.rs
brenn-lib/src/pwa_push/: config.rs  db.rs  endpoint_validator.rs  mod.rs  payload.rs  targets.rs  test_helpers.rs  vapid.rs
brenn-lib/src/tools/: config.rs  mod.rs
brenn-lib/src/webhook/: address.rs  config.rs  error.rs  mod.rs  service.rs  signature.rs
brenn-lib/src/ws_types/: mod.rs
brenn-lib/tests/: README.md  mqtt_integration.rs
brenn-lib/tests/common/: certs.rs  mod.rs  relay.rs  router.rs
brenn-lib/tests/mqtt_assets/: ASSETS-README.md  acl  mosquitto.conf.auth.tmpl  mosquitto.conf.tls13.tmpl  mosquitto.conf.tmpl  passwd
brenn-pfin/: Cargo.toml
brenn-pfin/src/: batch.rs  batch_assign.rs  batch_render.rs  card.rs  lib.rs  propose.rs  reconcile.rs
brenn-server/: Cargo.toml
brenn-server/src/: approval_formatter.rs  artifact.rs  artifact_snapshot.rs  automation_intercept.rs  cc_message_prefix.rs  cc_schema_drift.rs  cli.rs  client_ip.rs  frontmatter.rs  git_ops.rs  git_subprocess.rs  history.rs  hooks.rs  idle_hooks.rs  intercept_helpers.rs  lib.rs  markdown.rs  messaging_intercept.rs  messaging_router.rs  middleware.rs  mqtt_intercept.rs  mqtt_router.rs  mqtt_subscribe.rs  path_validate.rs  pid_file.rs  pwa_push_intercept.rs  repo_clone.rs  router.rs  state.rs  system_message.rs  webhook_router.rs
brenn-server/src/active_bridge/: approval_dispatch.rs  bridge.rs  bridge_io.rs  cc_spawn_config.rs  idle_hooks.rs  lifecycle.rs  mcp_constants.rs  mod.rs  permission_sync.rs  registry.rs  test_fixtures.rs  test_support.rs  tool_card.rs  tool_summary.rs  watchdog.rs
brenn-server/src/bootstrap/: apps.rs  automation.rs  cleanup.rs  mod.rs  mqtt.rs  obs_config.rs  pwa_push.rs  repo_sync.rs  shutdown.rs  wasm_mqtt.rs  webhook.rs
brenn-server/src/repo_sync/: git.rs  mod.rs  poller.rs  reactor.rs  test_git_fixtures.rs
brenn-server/src/routes/: app.rs  file.rs  login.rs  logout.rs  mod.rs  redirector.rs  register.rs  statics.rs  target_handler.rs  upload.rs
brenn-server/src/test_support/: app_config.rs  http.rs  mod.rs  mqtt.rs  state.rs  surface.rs  wasm.rs
brenn-server/src/tool_registry/: bus_wiring.rs  descriptor.rs  executor.rs  git_repo_pull.rs  mod.rs  rate_limit.rs  tool.rs  (+3 more)
brenn-usage/: Cargo.toml
brenn-usage-obs/: Cargo.toml
brenn-usage-obs/src/: lib.rs  main.rs
brenn-usage-obs/tests/: cli_tests.rs
brenn-usage/src/: cli.rs  main.rs
brenn-wasm/: Cargo.toml  README.md  deployed-components.txt
brenn-wasm/guest/: Cargo.toml
brenn-wasm/src/: lib.rs  store.rs
brenn-wasm/tests/: consume_engine.rs  grants.rs  instantiation_fail.rs  processor_config.rs  processor_log.rs  processor_mqtt.rs  processor_transplant.rs  replay_engine.rs  replay_engine_bounds.rs  replay_generic_engine.rs  store_round_trip.rs
brenn-wasm/wit/: processor.wit  replay.wit
brenn/src/: build_info.rs  main.rs
cc-usage/: Cargo.toml
cc-usage/src/: aggregate.rs  attribution.rs  config.rs  discovery.rs  error.rs  lib.rs  parse.rs  pricing.rs  report.rs  schema.rs  tokens.rs  warnings.rs
cc-usage/tests/: end_to_end.rs
scrub/: Cargo.toml  selfcheck.sh
scrub/repo-template/: README.md  setup-hooks.sh
scrub/src/: config.rs  dest.rs  exclude.rs  exempt.rs  git.rs  gitleaks.rs  help.rs  hook.rs  main.rs  message.rs  mirror.rs
scrub/tests/: exit_codes.rs  hook_dest.rs  modes.rs  rules.rs  write_exempt.rs
surface/chrome/: Cargo.toml  help.md
surface/component-support/: Cargo.toml
surface/contract/: Cargo.toml
surface/kernel/: Cargo.toml
surface/proto/: Cargo.toml
surface/test-fixtures/: Cargo.toml
xtask/: Cargo.toml  lint-allowlist.toml
xtask/src/: check_wit.rs  deny.rs  discover.rs  git_spawn_guard.rs  guard.rs  lint.rs  main.rs  parallel.rs  policy.rs  removal_guard.rs  test_run.rs
(+384 files in other folders)
