[package]
name = "brenn-cc"
version = "0.1.0"
edition = "2024"
publish = false

[features]
testutils = []

[dependencies]
brenn-lib = { version = "0.1.0", path = "../brenn-lib" }
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4.3"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["io-util", "sync", "time", "process", "macros", "rt"] }
tracing = "0.1.44"

[dev-dependencies]
brenn-lib = { version = "0.1.0", path = "../brenn-lib", features = ["testutils"] }
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["io-util", "sync", "time", "macros", "rt"] }
