[package]
name = "brenn-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
brenn-cc = { version = "0.1.0", path = "../brenn-cc" }
brenn-lib = { version = "0.1.0", path = "../brenn-lib" }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.27.0"
