[package]
name = "brenn-envelope"
version = "0.1.0"
edition = "2024"
publish = false
description = "Brenn message envelope wire types — shared between host and WASM guest"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["serde", "alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.149"
