[package]
name = "brenn-graf"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
brenn-lib = { version = "0.1.0", path = "../brenn-lib" }
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
graf = { git = "https://github.com/rnortman/graf.git", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["macros", "process", "rt", "time"] }
toml = "1.1.2"
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.27.0"
