[package]
name = "brenn-pfin"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.89"
brenn-lib = { version = "0.1.0", path = "../brenn-lib" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["macros", "process", "rt"] }
toml = "1.1.2"
tracing = "0.1.44"

[dev-dependencies]
brenn-lib = { version = "0.1.0", path = "../brenn-lib", features = ["testutils"] }
tempfile = "3.27.0"
