[package]
name = "brenn-usage"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "brenn-usage"
path = "src/main.rs"

[dependencies]
cc-usage = { version = "0.1.0", path = "../cc-usage" }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0.149"
