[package]
name = "cc-usage"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.3"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
thiserror = "2.0"
toml = "1.0.7"

[dev-dependencies]
tempfile = "3.27.0"
