[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
description = "Policy runner: lint, guard, check-wit for all Rust units in the repo"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
blake3 = "1.8.5"
quick-xml = "0.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1"
wasmparser = "0.244"
wit-component = "0.244"
wit-parser = "0.244"

[dev-dependencies]
tempfile = "3"
wat = "1"
