[package]
name = "brenn-surface-kernel"
version = "0.1.0"
edition = "2024"
publish = false
description = "Brenn surface kernel — sans-I/O WS protocol core + async driver plus the browser platform half (mount/route/publish/telemetry, connect indicator, error cards); compiled to wasm for the browser and to native for tests"

# The kernel is both the browser cdylib (wasm-bindgen entry in `entry.rs`) and an
# rlib the server links natively for the protected client-conformance suite and
# test support.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
brenn-surface-proto = { version = "0.1.0", path = "../proto" }
brenn-surface-contract = { version = "0.1.0", path = "../contract" }
brenn-envelope = { version = "0.1.0", path = "../../brenn-envelope" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4", "serde", "js"] }
# `clock` (hence the wasm-incompatible `Utc::now`) is enabled natively only; the
# browser reads `Date.now()` through the transport shim instead. Version-unified
# with brenn-envelope, whose `DateTime<Utc>` this crate constructs.
chrono = { version = "0.4.44", default-features = false, features = ["serde", "alloc"] }
futures-util = "0.3.32"
futures-channel = "0.3.32"
tracing = "0.1.44"
brenn-budget = { version = "0.1.0", path = "../../brenn-budget" }

# Native transport: tokio-tungstenite must stay version-unified with the
# backend's tungstenite pin (brenn/Cargo.toml) so the shared WS types agree.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.50.0", features = ["rt", "time", "net", "macros"] }
tokio-tungstenite = "0.29.0"
# `clock` powers the native `wall_now()`. Deliberately not enabled for wasm:
# chrono's `wasmbind` would reach for `Date.now()` behind our back, hiding the
# browser's wall-clock read from the transport shim that is supposed to own it.
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }

# Browser transport (WebSocket adapted to the async transport trait) plus the
# platform half's DOM effect executor (`dom.rs`) and wasm-bindgen entry
# (`entry.rs`): DOM creation, text rendering, CustomEvent dispatch/listeners, and
# the entry that wires the client driver + event loop. Host builds exclude all of
# this and need none of it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.75"
js-sys = "0.3.102"
web-sys = { version = "0.3.102", features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "CustomElementRegistry",
    "CssStyleDeclaration",
    "NodeList",
    "Location",
    "Performance",
    "console",
] }

# Host-only test fixtures. A dev-dependency never enters the wasm release graph,
# so the browser bundle is unaffected.
[dev-dependencies]
brenn-surface-test-fixtures = { path = "../test-fixtures" }

# Driver tests use paused virtual time (`start_paused`) to drive backoff,
# handshake-timeout, and liveness deadlines deterministically.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.50.0", features = ["rt", "time", "macros", "test-util"] }

# Browser-level unit tests (dom.rs, entry.rs) run under wasm-bindgen-test via
# `make surface-wasm-test`; wasm32-only so the host `cargo test` sweep never
# pulls them. futures-channel scripts the fake connector's transport events; the
# component-support path dep lets the entry integration test register a real
# custom element.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
futures-channel = { workspace = true }
brenn-surface-component-support = { path = "../component-support" }
