[package]
name = "brenn-surface-proto"
version = "0.1.0"
edition = "2024"
publish = false
description = "Brenn surface WS wire protocol types — shared between backend and the surface client (wasm + native)"

[dependencies]
brenn-envelope = { path = "../../brenn-envelope" }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.149"
chrono = { version = "0.4.44", default-features = false, features = ["serde", "alloc"] }
