# This crate is intentionally not a workspace member:
# it targets wasm32-unknown-unknown and must be built with plain
# `cargo build --release --target wasm32-unknown-unknown` followed by
# `wasm-tools component new` (see Makefile wasm_guest_component_rule).
[workspace]

[package]
name = "brenn-processor-log"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
brenn-guest = { path = "../../guest" }
serde_json = "1"
