# The transplant fixture: one artifact, two hostings.
#
# Built once and run both under the wasmtime harness (brenn-wasm/tests) and on
# a surface via the transpiled browser form. Both hostings reduce its
# observables to the same canonical transcript; equality of those transcripts
# is what "any component runs on any host that can satisfy its imports" means
# in executable form.
#
# Import profile is deliberately the transpilable one: ports + log + config.
# No store/mqtt/tools — those would make it backend-only.
# Not listed in brenn-wasm/deployed-components.txt.
# This crate is intentionally not a workspace member:
# it targets wasm32-unknown-unknown and must be built with cargo + wasm-tools.
[workspace]

[package]
name = "brenn-processor-transplant"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
brenn-guest = { path = "../../guest" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
